--- a/site/css/style.css
+++ b/site/css/style.css
@@ -201,7 +201,7 @@ img{
         width: 100%;
     }
     
-    .cursosDesc{
+    .cursesDesc{
         flex-wrap: wrap;
         margin-top: 0;
     }
